--- a/examples/blinky_ek-tm4c123gxl/armclang/project.uvprojx
+++ b/examples/blinky_ek-tm4c123gxl/armclang/project.uvprojx
@@ -10,8 +10,8 @@
       <TargetName>dbg</TargetName>
       <ToolsetNumber>0x4</ToolsetNumber>
       <ToolsetName>ARM-ADS</ToolsetName>
-      <pCCUsed>5060750::V5.06 update 6 (build 750)::ARMCC</pCCUsed>
-      <uAC6>0</uAC6>
+      <pCCUsed>6160000::V6.16::ARMCLANG</pCCUsed>
+      <uAC6>1</uAC6>
       <TargetOption>
         <TargetCommonOption>
           <Device>TM4C123GH6PM</Device>
@@ -49,7 +49,7 @@
             <InvalidFlash>1</InvalidFlash>
           </TargetStatus>
           <OutputDirectory>.\dbg\</OutputDirectory>
-          <OutputName>blinky-tm4c</OutputName>
+          <OutputName>project</OutputName>
           <CreateExecutable>1</CreateExecutable>
           <CreateLib>0</CreateLib>
           <CreateHexFile>0</CreateHexFile>
@@ -185,6 +185,7 @@
             <uocXRam>0</uocXRam>
             <RvdsVP>1</RvdsVP>
             <RvdsMve>0</RvdsMve>
+            <RvdsCdeCp>0</RvdsCdeCp>
             <hadIRAM2>0</hadIRAM2>
             <hadIROM2>0</hadIROM2>
             <StupSel>8</StupSel>
@@ -312,7 +313,7 @@
           </ArmAdsMisc>
           <Cads>
             <interw>0</interw>
-            <Optim>1</Optim>
+            <Optim>2</Optim>
             <oTime>0</oTime>
             <SplitLS>0</SplitLS>
             <OneElfS>1</OneElfS>
@@ -321,14 +322,14 @@
             <PlainCh>0</PlainCh>
             <Ropi>0</Ropi>
             <Rwpi>0</Rwpi>
-            <wLevel>2</wLevel>
+            <wLevel>3</wLevel>
             <uThumb>0</uThumb>
             <uSurpInc>1</uSurpInc>
             <uC99>1</uC99>
             <uGnu>0</uGnu>
             <useXO>0</useXO>
-            <v6Lang>0</v6Lang>
-            <v6LangP>0</v6LangP>
+            <v6Lang>3</v6Lang>
+            <v6LangP>3</v6LangP>
             <vShortEn>0</vShortEn>
             <vShortWch>0</vShortWch>
             <v6Lto>0</v6Lto>
@@ -338,7 +339,7 @@
               <MiscControls></MiscControls>
               <Define></Define>
               <Undefine></Undefine>
-              <IncludePath>.;..\..\inc;..\..\3rd_party\CMSIS\Include;..\..\3rd_party\ek-tm4c123gxl</IncludePath>
+              <IncludePath>.;..\..\..\include;..\..\..\3rd_party\CMSIS\Include;..\..\..\3rd_party\ek-tm4c123gxl</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -351,7 +352,7 @@
             <NoWarn>0</NoWarn>
             <uSurpInc>1</uSurpInc>
             <useXO>0</useXO>
-            <uClangAs>0</uClangAs>
+            <ClangAsOpt>4</ClangAsOpt>
             <VariousControls>
               <MiscControls></MiscControls>
               <Define>Stack_Size=1024 Heap_Size=16</Define>
@@ -385,17 +386,17 @@
             <File>
               <FileName>bsp.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\bsp.c</FilePath>
-            </File>
-            <File>
-              <FileName>main.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\main.c</FilePath>
+              <FilePath>..\bsp.c</FilePath>
             </File>
             <File>
               <FileName>bsp.h</FileName>
               <FileType>5</FileType>
-              <FilePath>.\bsp.h</FilePath>
+              <FilePath>..\bsp.h</FilePath>
+            </File>
+            <File>
+              <FileName>main.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\main.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -405,17 +406,17 @@
             <File>
               <FileName>system_TM4C123GH6PM.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\..\3rd_party\ek-tm4c123gxl\system_TM4C123GH6PM.c</FilePath>
+              <FilePath>..\..\..\3rd_party\ek-tm4c123gxl\system_TM4C123GH6PM.c</FilePath>
             </File>
             <File>
               <FileName>TM4C123GH6PM.h</FileName>
               <FileType>5</FileType>
-              <FilePath>..\..\3rd_party\ek-tm4c123gxl\TM4C123GH6PM.h</FilePath>
+              <FilePath>..\..\..\3rd_party\ek-tm4c123gxl\TM4C123GH6PM.h</FilePath>
             </File>
             <File>
               <FileName>startup_TM4C123GH6PM.s</FileName>
               <FileType>2</FileType>
-              <FilePath>..\..\3rd_party\ek-tm4c123gxl\arm\startup_TM4C123GH6PM.s</FilePath>
+              <FilePath>..\..\..\3rd_party\ek-tm4c123gxl\arm\startup_TM4C123GH6PM.s</FilePath>
             </File>
           </Files>
         </Group>
@@ -423,14 +424,9 @@
           <GroupName>MiROS</GroupName>
           <Files>
             <File>
-              <FileName>MiROS.c</FileName>
+              <FileName>miros_armclang.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\..\src\MiROS.c</FilePath>
-            </File>
-            <File>
-              <FileName>MiROS.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\..\inc\MiROS.h</FilePath>
+              <FilePath>..\..\..\src\armclang\miros_armclang.c</FilePath>
             </File>
           </Files>
         </Group>
