--- a/examples/blinky_nucleo-c031c6/armclang/project.uvprojx
+++ b/examples/blinky_nucleo-c031c6/armclang/project.uvprojx
@@ -14,16 +14,16 @@
       <uAC6>1</uAC6>
       <TargetOption>
         <TargetCommonOption>
-          <Device>STM32L152RE</Device>
+          <Device>STM32C031C6Tx</Device>
           <Vendor>STMicroelectronics</Vendor>
-          <PackID>Keil.STM32L1xx_DFP.1.4.1</PackID>
-          <PackURL>http://www.keil.com/pack/</PackURL>
-          <Cpu>IROM(0x08000000,0x80000) IRAM(0x20000000,0x14000) CPUTYPE("Cortex-M3") CLOCK(12000000) ELITTLE</Cpu>
+          <PackID>Keil.STM32C0xx_DFP.1.0.0</PackID>
+          <PackURL>https://www.keil.com/pack/</PackURL>
+          <Cpu>IRAM(0x20000000,0x00003000) IROM(0x08000000,0x00008000) CPUTYPE("Cortex-M0+") CLOCK(12000000) ELITTLE</Cpu>
           <FlashUtilSpec></FlashUtilSpec>
           <StartupFile></StartupFile>
-          <FlashDriverDll>UL2CM3(-S0 -C0 -P0 -FD20000000 -FC1000 -FN1 -FF0STM32L1xx_512 -FS08000000 -FL080000 -FP0($$Device:STM32L152RE$Flash\STM32L1xx_512.FLM))</FlashDriverDll>
+          <FlashDriverDll>UL2CM3(-S0 -C0 -P0 -FD20000000 -FC1000 -FN1 -FF0STM32C0x_32 -FS08000000 -FL08000 -FP0($$Device:STM32C031C6Tx$CMSIS\Flash\STM32C0x_32.FLM))</FlashDriverDll>
           <DeviceId>0</DeviceId>
-          <RegisterFile>$$Device:STM32L152RE$Device\Include\STM32L1xx.h</RegisterFile>
+          <RegisterFile>$$Device:STM32C031C6Tx$Drivers\CMSIS\Device\ST\STM32C0xx\Include\stm32c0xx.h</RegisterFile>
           <MemoryEnv></MemoryEnv>
           <Cmp></Cmp>
           <Asm></Asm>
@@ -33,7 +33,7 @@
           <SLE66CMisc></SLE66CMisc>
           <SLE66AMisc></SLE66AMisc>
           <SLE66LinkerMisc></SLE66LinkerMisc>
-          <SFDFile>$$Device:STM32L152RE$SVD\STM32L1xx.svd</SFDFile>
+          <SFDFile>$$Device:STM32C031C6Tx$CMSIS\SVD\STM32C031.svd</SFDFile>
           <bCustSvd>0</bCustSvd>
           <UseEnv>0</UseEnv>
           <BinPath></BinPath>
@@ -110,13 +110,13 @@
         </CommonProperty>
         <DllOption>
           <SimDllName>SARMCM3.DLL</SimDllName>
-          <SimDllArguments> -REMAP -MPU</SimDllArguments>
-          <SimDlgDll>DCM.DLL</SimDlgDll>
-          <SimDlgDllArguments>-pCM3</SimDlgDllArguments>
+          <SimDllArguments> -REMAP-MPU </SimDllArguments>
+          <SimDlgDll>DARMCM1.DLL</SimDlgDll>
+          <SimDlgDllArguments>-pCM0+</SimDlgDllArguments>
           <TargetDllName>SARMCM3.DLL</TargetDllName>
-          <TargetDllArguments> -MPU</TargetDllArguments>
-          <TargetDlgDll>TCM.DLL</TargetDlgDll>
-          <TargetDlgDllArguments>-pCM3</TargetDlgDllArguments>
+          <TargetDllArguments>-MPU </TargetDllArguments>
+          <TargetDlgDll>TARMCM1.DLL</TargetDlgDll>
+          <TargetDlgDllArguments>-pCM0+</TargetDlgDllArguments>
         </DllOption>
         <DebugOption>
           <OPTHX>
@@ -138,7 +138,7 @@
           </Flash1>
           <bUseTDR>1</bUseTDR>
           <Flash2>BIN\UL2CM3.DLL</Flash2>
-          <Flash3>"" ()</Flash3>
+          <Flash3></Flash3>
           <Flash4></Flash4>
           <pFcarmOut></pFcarmOut>
           <pFcarmGrp></pFcarmGrp>
@@ -174,7 +174,7 @@
             <AdsLsxf>1</AdsLsxf>
             <RvctClst>0</RvctClst>
             <GenPPlst>0</GenPPlst>
-            <AdsCpuType>"Cortex-M3"</AdsCpuType>
+            <AdsCpuType>"Cortex-M0+"</AdsCpuType>
             <RvctDeviceName></RvctDeviceName>
             <mOS>0</mOS>
             <uocRom>0</uocRom>
@@ -247,12 +247,12 @@
               <IRAM>
                 <Type>0</Type>
                 <StartAddress>0x20000000</StartAddress>
-                <Size>0x14000</Size>
+                <Size>0x3000</Size>
               </IRAM>
               <IROM>
                 <Type>1</Type>
                 <StartAddress>0x8000000</StartAddress>
-                <Size>0x80000</Size>
+                <Size>0x8000</Size>
               </IROM>
               <XRAM>
                 <Type>0</Type>
@@ -277,7 +277,7 @@
               <OCR_RVCT4>
                 <Type>1</Type>
                 <StartAddress>0x8000000</StartAddress>
-                <Size>0x80000</Size>
+                <Size>0x8000</Size>
               </OCR_RVCT4>
               <OCR_RVCT5>
                 <Type>1</Type>
@@ -302,7 +302,7 @@
               <OCR_RVCT9>
                 <Type>0</Type>
                 <StartAddress>0x20000000</StartAddress>
-                <Size>0x14000</Size>
+                <Size>0x3000</Size>
               </OCR_RVCT9>
               <OCR_RVCT10>
                 <Type>0</Type>
@@ -340,7 +340,7 @@
               <MiscControls></MiscControls>
               <Define></Define>
               <Undefine></Undefine>
-              <IncludePath>..;..\..\..\include;..\..\..\3rd_party\CMSIS\Include;..\..\..\3rd_party\nucleo-l152re</IncludePath>
+              <IncludePath>..;..\..\..\include;..\..\..\3rd_party\CMSIS\Include;..\..\..\3rd_party\nucleo-c031c6</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -402,22 +402,22 @@
           </Files>
         </Group>
         <Group>
-          <GroupName>nucleo-l152re</GroupName>
+          <GroupName>nucleo-c031c6</GroupName>
           <Files>
             <File>
-              <FileName>stm32l1xx.h</FileName>
+              <FileName>stm32c031xx.h</FileName>
               <FileType>5</FileType>
-              <FilePath>..\..\..\3rd_party\nucleo-l152re\stm32l1xx.h</FilePath>
+              <FilePath>..\..\..\3rd_party\nucleo-c031c6\stm32c031xx.h</FilePath>
             </File>
             <File>
-              <FileName>system_stm32l1xx.c</FileName>
+              <FileName>system_stm32c0xx.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\..\..\3rd_party\nucleo-l152re\system_stm32l1xx.c</FilePath>
+              <FilePath>..\..\..\3rd_party\nucleo-c031c6\system_stm32c0xx.c</FilePath>
             </File>
             <File>
-              <FileName>startup_stm32l1xx.s</FileName>
+              <FileName>startup_stm32c031xx.s</FileName>
               <FileType>2</FileType>
-              <FilePath>..\..\..\3rd_party\nucleo-l152re\arm\startup_stm32l1xx.s</FilePath>
+              <FilePath>..\..\..\3rd_party\nucleo-c031c6\arm\startup_stm32c031xx.s</FilePath>
             </File>
           </Files>
         </Group>
@@ -834,22 +834,22 @@
           </Files>
         </Group>
         <Group>
-          <GroupName>nucleo-l152re</GroupName>
+          <GroupName>nucleo-c031c6</GroupName>
           <Files>
             <File>
-              <FileName>stm32l1xx.h</FileName>
+              <FileName>stm32c031xx.h</FileName>
               <FileType>5</FileType>
-              <FilePath>..\..\..\3rd_party\nucleo-l152re\stm32l1xx.h</FilePath>
+              <FilePath>..\..\..\3rd_party\nucleo-c031c6\stm32c031xx.h</FilePath>
             </File>
             <File>
-              <FileName>system_stm32l1xx.c</FileName>
+              <FileName>system_stm32c0xx.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\..\..\3rd_party\nucleo-l152re\system_stm32l1xx.c</FilePath>
+              <FilePath>..\..\..\3rd_party\nucleo-c031c6\system_stm32c0xx.c</FilePath>
             </File>
             <File>
-              <FileName>startup_stm32l1xx.s</FileName>
+              <FileName>startup_stm32c031xx.s</FileName>
               <FileType>2</FileType>
-              <FilePath>..\..\..\3rd_party\nucleo-l152re\arm\startup_stm32l1xx.s</FilePath>
+              <FilePath>..\..\..\3rd_party\nucleo-c031c6\arm\startup_stm32c031xx.s</FilePath>
             </File>
           </Files>
         </Group>
